--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@mui/icons-material": "^5.15.7",
     "@mui/material": "^5.15.7",
     "@mui/material-nextjs": "^5.15.7",
+    "joi": "^17.12.1",
     "next": "14.0.4",
+    "notistack": "^3.0.1",
     "react": "^18",
     "react-dom": "^18"
   },
